app/infrastructure/contour.yaml
apiVersion: v1
kind: Namespace
metadata: { name: contour }
