app/infrastructure/restic.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restic

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: restic
  namespace: restic
spec:
  selector: { matchLabels: {app: restic} }
  template:
    metadata: { labels: {app: restic} }
    spec:
      containers:
        - name: restic
          image: ghcr.io/lobaro/restic-backup-docker:latest
          envFrom: [{ secretRef: { name: restic-secrets } }]
          volumeMounts: [{ name: data, mountPath: /data }]
      volumes:
        - name: data
          hostPath: { path: "/k3s-storage", type: DirectoryOrCreate }
