app/infrastructure/tailscale.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tailscale
  namespace: tailscale
  annotations:
    argocd-image-updater.argoproj.io/image-list: ghcr.io/tailscale/tailscale:latest
    argocd-image-updater.argoproj.io/auth-server.update-strategy: digest
spec:
  serviceAccountName: tailscale
  containers:
    - name: tailscale
      imagePullPolicy: Always
      image: "ghcr.io/tailscale/tailscale:latest"
      securityContext: { runAsUser: 1000, runAsGroup: 1000 }
