app/infrastructure/keel.yaml
apiVersion: v1
kind: Service
metadata:
  name: keel
  namespace: kube-system
spec:
  selector: { app: keel }
  ports: [{ port: 9300, name: keel, targetPort: 9300 }]
